# PerplexityGuard-Bench

./: .gitignore  README.md  pyproject.toml  validate_perplexity.py
perplexity_guard/: README.md  __init__.py  perplexity_guard.py  requirements.txt
perplexity_guard/audit/: __init__.py  patch_report.py  patch_report_v2.py  revert_attack.py  run_audit.py  run_audit_v2.py  screen_variants.py  sliding_window.py  stitch_attack.py  stitch_t33.py
perplexity_guard/audit/results/: audit_matrix.csv  or_gate_consistency.json  stitch_attack.csv  stitch_attack_summary.csv  stitch_attack_sw.csv  stitch_attack_sw_idrfree.csv  stitch_attack_sw_t30.csv  stitch_attack_sw_t33.csv  stitch_attack_t30_v2_summary.csv  stitch_attack_t33_summary.csv  stitch_attack_v2_summary.csv
perplexity_guard/calibration/: facebook_esm2_t12_35M_UR50D.json  facebook_esm2_t12_35M_UR50D_window30.json  facebook_esm2_t12_35M_UR50D_window30_idrfree.json  facebook_esm2_t30_150M_UR50D.json  facebook_esm2_t30_150M_UR50D_window30.json  facebook_esm2_t33_650M_UR50D.json  facebook_esm2_t33_650M_UR50D_window30.json  uniprot_sample.fasta  uniprot_sample_idrfree.fasta
perplexity_guard/core/: __init__.py  complexity.py  ensemble.py  esm_analysis.py  proteinmpnn_wrapper.py  screening.py
perplexity_guard/demo_results/: RESULTS.md  e2e_demo.csv  e2e_demo.json
perplexity_guard/tests/: run_e2e_demo.py  test_validation.py
results/: scores.npz  summary.json
