[project]
name = "aixbio"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.87",
    "commec",
    "gradio>=6.13.0",
    "mako>=1.3.11",
    "matplotlib>=3.10.9",
    "metapredict>=3.0.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pytaxonkit",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "transformers>=5.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["perplexity_guard"]

[tool.uv.sources]
pytaxonkit = { git = "https://github.com/bioforensics/pytaxonkit" }
commec = { git = "https://github.com/ibbis-screening/common-mechanism", rev = "v0.3.2" }
